<resources>
    <string name="app_name">Notes</string>
    <string name="Title">Notes</string>
    <string name="search_notes">Search</string>
    <string name="add_from_the_web">Add from the web</string>
    <string name="add_image">Add image</string>
    <string name="add_note">Add Note</string>
    <string name="note_title">Note title</string>
    <string name="notePrompt">What are you thinking …</string>
    <string name="create_note">Create Note</string>
    <string name="pick_note_colour">Pick note colour</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="note_color_3">note_color 3</string>
    <string name="note_color_1">Note color 1</string>
    <string name="note_color_2">Note color 2</string>
    <string name="note_color_4">Note color 4</string>
    <string name="date">date</string>
</resources>