<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/primary"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/teachers_bold"
        android:text="@string/Title"
        android:textColor="@color/color_white"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/appTitle"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:paddingHorizontal="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:background="@color/search_background">
        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_search"
            app:tint="@color/color_white" />
        <EditText
            android:id="@+id/search_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:fontFamily="@font/teachers_regular"
            android:inputType="text"
            android:importantForAutofill="no"
            android:background="@null"
            android:hint="@string/search_notes"
            android:layout_marginStart="@dimen/_8sdp"
            android:textColor="@color/color_white"
            />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/_2sdp"
        android:padding="@dimen/_12sdp"
        >

    </androidx.recyclerview.widget.RecyclerView>
    <LinearLayout
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:gravity="center_vertical"
        android:background="@color/search_background"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="@dimen/_10sdp"
        >
        <ImageView
            android:id="@+id/add_icon"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:contentDescription="@string/add_note"
            android:src="@drawable/add_rounded"
            android:layout_marginStart="@dimen/_15sdp"
            app:tint="@color/color_white" />
        <ImageView
            android:id="@+id/save_note"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:contentDescription="@string/add_image"
            android:src="@drawable/photo_camera"
            android:layout_marginStart="@dimen/_15sdp"
            app:tint="@color/color_white" />
        <ImageView
            android:id="@+id/add_from_web"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:contentDescription="@string/add_from_the_web"
            android:src="@drawable/attach_file"
            android:layout_marginStart="@dimen/_15sdp"
            app:tint="@color/color_white" />
    </LinearLayout>
    <ImageView
        android:id="@+id/create_note"
        android:contentDescription="@string/create_note"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/add_button_container"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="@dimen/_30sdp"
        android:padding="@dimen/_5sdp"
        app:layout_constraintTop_toTopOf="@id/bottom_nav"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/primary"
        android:src="@drawable/add"
        />
</androidx.constraintlayout.widget.ConstraintLayout>