<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/miscellaneous_drawer"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_150sdp"
    android:background="@drawable/miscellaneous_background"
    android:orientation="vertical"
    app:behavior_peekHeight="@dimen/_40sdp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/misc_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/teachers_bold"
        android:padding="@dimen/_5sdp"
        android:text="@string/miscellaneous"
        android:textAlignment="center"
        android:textColor="@color/color_white"
        android:textSize="@dimen/_15sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View

                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/note_color" />

            <ImageView
                android:id="@+id/view_color_default"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/check"
                app:tint="@color/color_white" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:background="@drawable/note_color_1"
                android:id="@+id/view_color_1"
                android:contentDescription="@string/note_color_1"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:padding="@dimen/_10sdp"
                app:tint="@color/miscellaneous_background" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:background="@drawable/note_color_2"
                android:id="@+id/view_color_2"
                android:contentDescription="@string/note_color_2"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:padding="@dimen/_10sdp"
                app:tint="@color/miscellaneous_background" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/view_color_3"
                android:background="@drawable/note_color_3"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:contentDescription="@string/note_color_3"
                android:padding="@dimen/_10sdp"
                app:tint="@color/miscellaneous_background" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/view_color_4"
                android:contentDescription="@string/note_color_4"
                android:background="@drawable/note_color_4"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:padding="@dimen/_10sdp"
                app:tint="@color/miscellaneous_background" />
        </FrameLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:background="@drawable/note_color_5"
                android:id="@+id/view_color_5"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:padding="@dimen/_10sdp"
                app:tint="@color/miscellaneous_background" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:background="@drawable/note_color_6"
                android:id="@+id/view_color_6"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:padding="@dimen/_10sdp"
                app:tint="@color/miscellaneous_background" />
        </FrameLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/teachers_regular"
        android:padding="@dimen/_5sdp"
        android:text="@string/pick_note_colour"
        android:textAlignment="center"
        android:textColor="@color/color_white"
        android:textSize="15sp" />
</LinearLayout>