<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:id="@+id/main" xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_10sdp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/create_note_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_12sdp"
            android:paddingTop="@dimen/_20sdp"
            android:animateLayoutChanges="true"
            >
            <ImageView
                android:id="@+id/goBack"
                android:layout_width="31dp"
                android:layout_height="30dp"
                android:contentDescription="@string/add_note"
                android:src="@drawable/back"
                app:layout_constraintStart_toStartOf="@id/create_note_container"
                app:layout_constraintTop_toTopOf="@id/create_note_container"
                app:tint="@color/color_white" />

            <ImageView
                android:id="@+id/save_note"
                android:layout_width="40dp"
                android:layout_height="34dp"
                android:baselineAlignBottom="false"
                android:contentDescription="@string/add_image"
                android:src="@drawable/done"
                app:layout_constraintRight_toRightOf="@id/create_note_container"
                app:layout_constraintTop_toTopOf="@id/create_note_container"
                app:tint="@color/color_white" />
            <EditText
                android:id="@+id/note_title"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="0dp"
                android:layout_height="@dimen/_50sdp"
                android:hint="@string/note_title"
                android:backgroundTint="@color/color_white"
                app:layout_constraintTop_toBottomOf="@id/save_note"
                app:layout_constraintRight_toRightOf="@id/create_note_container"
                app:layout_constraintStart_toStartOf="@id/create_note_container"
                android:fontFamily="@font/teachers_bold"
                android:textColor="@color/color_white"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:background="@null"
                android:textColorHint="@color/color_white"
                android:imeOptions="actionDone"
                android:textSize="@dimen/_20sdp"
                android:gravity="center_vertical"
                android:inputType="text"
                />
            <EditText
                android:id="@+id/note_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/notePrompt"
                android:backgroundTint="@color/color_white"
                app:layout_constraintTop_toBottomOf="@id/note_title"
                app:layout_constraintRight_toRightOf="@id/create_note_container"
                app:layout_constraintStart_toStartOf="@id/create_note_container"
                android:includeFontPadding="false"
                android:fontFamily="@font/teachers_regular"
                android:textColor="@color/color_white"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:background="@null"
                android:textColorHint="@color/color_white"
                android:textSize="@dimen/_14sdp"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/_100sdp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>